--- a/content/blog/production-llm-agents.mdx
+++ b/content/blog/production-llm-agents.mdx
@@ -1,175 +1,333 @@
 ---
-title: "Building Production LLM Agent Systems: Architecture & Lessons Learned"
-date: "2025-01-20"
-description: "Lessons from building and deploying agentic AI workflows that serve 300+ users in production, covering architecture decisions, tool selection, and real-world challenges."
-tags: ["LLM", "AI Agents", "Production ML", "AWS"]
+title: "Simplifying Multi-Agent Systems: Reducing Root Agent Complexity"
+description: "A technical analysis of how simplifying a root orchestrator agent improved system performance and maintainability in production AI agent systems."
+date: "2025-10-18"
+tags: ["AI agents", "Google ADK", "multi agent systems", "prompt engineering", "performance optimization",]
+draft: false
 ---
 
-Over the past year building our AI supply chain startup, I've deployed agentic workflows serving 300+ users in production. Here's what I learned about building reliable LLM agent systems.
+# Simplifying Multi-Agent Systems: Reducing Root Agent Complexity
 
-## The Problem
+## The Complex Root Agent I Started With
 
-Traditional automation struggles with complex, multi-step decision-making in supply chain operations. We needed a system that could:
-
-- Parse multimodal documents (PDFs with tables, images, text)
-- Make context-aware decisions across multiple data sources
-- Maintain reliability at scale
-- Optimize for both latency and cost
-
-## Architecture Overview
-
-Our production system consists of several key components:
-
-```
-┌─────────────────────────────────────────────────┐
-│  User Interface (FastAPI)                       │
-└────────────────┬────────────────────────────────┘
-                 │
-┌────────────────▼────────────────────────────────┐
-│  Agent Orchestration Layer                      │
-│  (Google ADK / PydanticAI)                     │
-└────────┬────────────────────┬───────────────────┘
-         │                    │
-    ┌────▼─────┐         ┌────▼─────────────┐
-    │   LLM    │         │  Vector Search   │
-    │ (Claude) │         │   (Pinecone)     │
-    └──────────┘         └──────────────────┘
-```
-
-### Why Google ADK and PydanticAI?
-
-After evaluating LangChain, LlamaIndex, and custom solutions, I chose **Google ADK** and **PydanticAI** for:
-
-**Type Safety**: Pydantic models ensure data validation at every step
-- Catch errors early in development
-- Self-documenting agent interfaces
-- Easy to refactor as requirements change
-
-**Observability**: Built-in logging and tracing
-- Critical for debugging production issues
-- Track agent decision paths
-- Monitor costs per workflow
-
-**Flexibility**: Composable agent patterns
-- Mix and match tools easily
-- Test components independently
-- Gradual rollout of new capabilities
-
-## Key Technical Decisions
-
-### 1. Multimodal RAG Pipeline
-
-For PDF processing, we implemented a multi-stage pipeline:
+A while ago, my ADK root orchestrator agent was a 150-line prompt that tried to handle too much complexity. It had intricate conditional logic, state management, and transfer rules that spanned multiple nested if-else statements. The system was slower than needed and sometimes confused users with incorrect agent transfers.
 
 ```python
-# Example architecture (simplified)
-class DocumentProcessor:
-    def process(self, pdf_bytes: bytes) -> ProcessedDocument:
-        # Extract text, tables, and images
-        text = self.text_extractor.extract(pdf_bytes)
-        tables = self.table_parser.parse(pdf_bytes)
-        images = self.image_analyzer.analyze(pdf_bytes)
+# The pattern I was using - too complex
+@adk.agent
+def coordinator():
+    return types.Agent(
+        name="coordinator",
+        instruction="""
+        You are a workflow coordinator that must understand user intent deeply.
 
-        # Generate embeddings
-        embeddings = self.embed_chunks(text, tables)
+        If user asks about requirements but they're not complete:
+            Check if they're asking new requirements or clarifying existing ones
+            If new requirements: transfer to requirement_agent
+            If clarifying: handle directly
 
-        # Store in vector DB
-        self.vector_store.upsert(embeddings)
+        elif user has seen search results:
+            Analyze if they want more results, want to select, or have questions
+            If they want to "tell me more": transfer to product_agent
+            If they want to "compare": handle directly
+            If they want new search: transfer to search_agent
 
-        return ProcessedDocument(...)
+        # ... 30+ more lines of conditional logic
+        """,
+        tools=[complex_state_checker, intent_analyzer, workflow_manager]
+    )
 ```
 
-**Result**: 80% reduction in manual operations
+The result? Slower response times and a system that was harder to maintain. Adding new features meant understanding complex conditional branches.
 
-**Key insight**: Don't embed images directly - use vision models to generate text descriptions, then embed those. Much better retrieval performance.
+## The Breakthrough: Radical Simplification
 
-### 2. Cost vs. Latency Optimization
+The solution wasn't more logic - it was dramatically less. I reduced my root agent from 150 lines to just 79 lines by making it **truly dumb** and letting specialists be smart.
 
-We use a tiered approach:
+### The New Root Agent: Simple and Focused
 
-- **Fast path** (80% of queries): Smaller, faster model (Claude Haiku)
-- **Complex path** (20% of queries): Larger model (Claude Opus) with multi-step reasoning
-- **Routing logic**: Lightweight classifier determines which path
-
-This reduced our average cost per query by 60% while maintaining quality.
-
-### 3. Error Handling Strategies
-
-LLM systems fail in unique ways. Our approach:
+Here's the pattern I use now:
 
 ```python
-@retry(max_attempts=3, backoff=exponential)
-async def agent_workflow(input: Request):
-    try:
-        result = await agent.run(input)
+@adk.agent
+def coordinator():
+    return types.Agent(
+        name="coordinator",
+        instruction="""
+        You are a workflow coordinator for sourcing manufacturers.
+        Your role is simple: manage workflow progression and let specialists handle everything else.
 
-        # Validate output structure
-        if not validate_response(result):
-            # Fallback to simpler workflow
-            return await fallback_agent.run(input)
+        **WORKFLOW STATES:**
+        1. Requirements → 2. Search → 3. Selection → 4. Specifications → 5. Quotes
 
-        return result
-    except RateLimitError:
-        # Graceful degradation
-        return cached_response_or_queue(input)
+        **REQUIRED TRANSFERS (Only These):**
+        - No requirements → requirement_gathering_agent
+        - Requirements complete + no search → catalog_search_agent
+        - Selections complete → product_specs_agent (automatic)
+        - Specs complete + user wants quotes → quote_preparation_agent
+
+        **NEVER TRANSFER:**
+        - If a specialist agent can handle the user's request
+        - More than twice per conversation turn
+
+        **YOUR SIMPLE JOB:**
+        1. Check session state workflow progress
+        2. Transfer only for required workflow progression
+        3. Let specialist agents handle all user questions
+        4. Provide workflow summaries when complete
+        """,
+        sub_agents=[
+            requirement_gathering_agent,
+            catalog_search_agent,
+            product_selection_agent,
+            product_specs_agent,
+            quote_preparation_agent,
+        ]
+    )
 ```
 
-## Results & Metrics
+That's the entire orchestrator logic. **47% less code** than the previous version. All the complex conditional logic is gone.
 
-After 6 months in production:
+### What Actually Changed: The Architecture Shift
 
-- **300+ registered users**
-- **80% reduction** in manual document processing time
-- **99.2% uptime** (targeting 99.5%)
-- **Average latency**: 2.3s for simple queries, 8.5s for complex workflows
-- **Cost per query**: $0.04 average (down from $0.10 initially)
+**Before (Complex Root Agent):**
+- 150 lines of conditional logic
+- Complex state checking with nested if-else statements
+- Root agent tried to understand user intent deeply
+- Transfer rules spanned dozens of conditions
+- High cognitive load on the orchestrator
 
-## What I'd Do Differently
+**After (Simple Root Agent):**
+- 79 lines total (including imports and formatting)
+- Simple declarative transfer rules
+- Root agent only checks workflow state
+- Clear "required transfers" vs "never transfer" rules
+- Heavy lifting delegated to specialists
 
-### 1. Start with Evals Earlier
+The key insight: **The root agent shouldn't try to be smart.** It should just know when to pass control to someone who is.
 
-We waited too long to build comprehensive evaluation sets. Should have:
-- Created golden test sets from day 1
-- Automated regression testing
-- A/B tested agent changes
+### The Secret Sauce: Better Sub-Agent Descriptions
 
-### 2. Invest in Observability from Day 1
+One crucial discovery I made: **well-written sub-agent descriptions make the root agent's job trivial**. Instead of complex conditional logic, I now focus on writing clear, descriptive sub-agent definitions.
 
-Added logging/tracing as an afterthought. Now it's our most valuable debugging tool.
+```python
+# Before: Generic description
+@adk.agent
+def catalog_search_agent():
+    return types.Agent(
+        name="catalog_search_agent",
+        description="Searches for products",
+        instruction="Search the catalog and return results"
+    )
 
-### 3. Prompt Versioning
+# After: Detailed, proactive description
+@adk.agent
+def catalog_search_agent():
+    return types.Agent(
+        name="catalog_search_agent",
+        description="Use PROACTIVELY when user provides search queries, search criteria, specifications, technical details, filters, price ranges, MOQ requirements, or search refinement requests. Handles text search, image search, and search refinement.",
+        instruction="""
+        You are a product search specialist. When users mention:
+        - Product types, specifications, or features
+        - Search criteria or filters
+        - Price ranges or MOQ requirements
+        - Image uploads for visual search
+        - Search refinement requests
 
-We initially hard-coded prompts. Big mistake. Now we:
-- Version prompts in separate files
-- Track which version is in production
-- A/B test prompt changes
+        Automatically search and display results. Handle follow-up questions about the search results.
+        """
+    )
+```
 
-## Tech Stack Summary
+This descriptive approach means the root agent doesn't need complex logic to decide when to use each specialist - the sub-agents essentially advertise their own use cases.
 
-| Component | Technology | Why |
-|-----------|-----------|-----|
-| Orchestration | Google ADK, PydanticAI | Type safety, observability |
-| LLM | Claude (Anthropic) | Instruction following, context window |
-| Vector DB | Pinecone | Managed service, good performance |
-| API Framework | FastAPI | Async support, automatic docs |
-| Infrastructure | AWS (Lambda, ECS, CDK) | Familiar, good tooling |
-| Monitoring | CloudWatch + custom metrics | Integrated with AWS |
+### Specialists Handle the Complexity
 
-## Lessons for Building Your Own System
+With the root agent simplified, the specialist agents became more capable and self-contained:
 
-1. **Start simple**: Don't over-engineer. Get a working end-to-end system first.
-2. **Measure everything**: You can't optimize what you don't measure.
-3. **Plan for failure**: LLMs will fail in unexpected ways. Design for graceful degradation.
-4. **Invest in tooling**: Good evals, logging, and monitoring pay dividends.
-5. **Iterate on prompts**: This is where most of your "tuning" happens in production.
+```python
+# Product selection agent handles all details and comparisons
+@adk.agent
+def product_selection_agent():
+    return types.Agent(
+        name="product_selection_agent",
+        instruction="""
+        Provide detailed product/factory information.
+        Handle comparisons and "tell me more" requests.
+        Help users make selections.
+        Return when selection is complete.
+        """,
+        tools=[product_details_tool, comparison_tool]
+    )
+```
+
+Each specialist is now responsible for its own domain complexity, including handling user questions within that domain.
+
+## The Performance Impact: Why Simplicity Wins
+
+### What Actually Improved
+
+While I didn't run formal benchmarks, the architectural simplification clearly delivered better results in practice:
+
+**What Felt Better:**
+- **Response Quality**: More consistent and appropriate agent behavior
+- **System Reliability**: Fewer confused responses and transfer loops
+- **Development Experience**: Much easier to understand and modify the system
+- **Code Maintainability**: Simpler logic meant fewer bugs and easier debugging
+
+**Code Reduction:**
+- **Root Agent**: 150 lines → 79 lines (47% reduction)
+- **Complexity**: Eliminated nested conditional logic
+- **Cognitive Load**: Much easier for new developers to understand
+
+**Why This Works Better:**
+
+1. **Reduced Cognitive Load**: The LLM processes fewer tokens and simpler logic
+2. **Clearer Decision Paths**: No nested conditional branches to evaluate
+3. **Better Context Preservation**: Fewer unnecessary transfers
+4. **Specialist Ownership**: Each agent owns its domain completely
+
+### The Simpler Transfer Logic
+
+Instead of complex routing logic, the new system uses simple state-based transfers:
+
+```python
+# Old: Complex conditional logic (30+ lines)
+if not requirements_status == "COMPLETED":
+    if user is asking NEW requirements (not clarifying existing):
+        transfer_to_requirement_agent()
+    else:
+        handle_question_directly()
+elif not search_completed:
+    if catalog_results_exist:
+        if user wants explicit_request:
+            transfer_to_search_agent()
+        else:
+            display_results_and_wait()
+    elif should_trigger_web_search:
+        transfer_to_web_search_agent()
+
+# New: Simple state checking (3-4 lines)
+if not requirements_complete:
+    transfer_to_requirement_agent()
+elif search_needed:
+    transfer_to_search_agent()
+elif selection_complete:
+    transfer_to_specs_agent()
+```
+
+The LLM spends less time trying to figure out what to do and more time actually helping users.
+
+## Key Principles for Agent Simplification
+
+### 1. The "Dumb Coordinator" Principle
+
+Your root agent shouldn't try to understand user intent deeply. It should only:
+- Check workflow state
+- Follow simple transfer rules
+- Let specialists handle complexity
+
+```python
+# Bad: Complex intent analysis
+"Analyze if user is asking for clarification vs new requirements
+and determine if they need search results or want to proceed
+based on conversation context and previous interactions..."
+
+# Good: Simple state checking
+"Requirements complete? → Search agent needed.
+Selections complete? → Specs agent needed."
+```
+
+### 2. Specialist Ownership
+
+Each specialist owns their domain completely:
+- They handle domain-specific questions
+- They determine when their work is done
+- They manage their own tools and logic
+- They only transfer when workflow progression is required
+
+### 3. Minimal Transfer Logic
+
+Instead of complex conditional branching, use:
+- Clear workflow states
+- Simple transfer triggers
+- Explicit "never transfer" rules
+- Transfer prevention for follow-up questions
+
+## The Results: Why This Matters
+
+The architectural shift delivered more than just cleaner code:
+
+**What Actually Improved:**
+
+**Code Quality & Maintenance:**
+- **Root Agent**: 150 lines → 79 lines (47% reduction)
+- **Complexity**: Eliminated nested conditional logic
+- **Readability**: Much easier to understand the system flow
+- **Debugging**: Simpler logic meant easier troubleshooting
+
+**Development Experience:**
+- **Faster modifications**: Adding features requires understanding simple transfer rules
+- **Easier onboarding**: New developers grasp the system quickly
+- **Cleaner debugging**: Fewer places for logic to go wrong
+- **Better testing**: Simpler agents are easier to test in isolation
+
+**User Experience:**
+- Smoother conversations with fewer unnecessary transfers
+- More consistent agent behavior
+- Better context preservation throughout the workflow
+- More natural interactions with specialist agents
+
+## How to Apply This to Your Own Systems
+
+### The Simplification Checklist
+
+**Before Refactoring:**
+- [ ] Identify complex conditional logic in your root agent
+- [ ] Map out your current transfer patterns
+- [ ] Measure baseline performance (response time, success rate)
+- [ ] Document which agent handles which domain
+
+**During Refactoring:**
+- [ ] Move domain-specific logic to specialist agents
+- [ ] Simplify root agent to state-based transfers only
+- [ ] Add explicit "never transfer" rules
+- [ ] Test each specialist agent independently
+
+**After Refactoring:**
+- [ ] Measure performance improvements
+- [ ] Monitor transfer success rates
+- [ ] Check for reduced token usage
+- [ ] Validate that all workflows still work
+
+### Common Anti-Patterns to Avoid
+
+1. **The Smart Coordinator**: Root agent trying to understand user intent deeply
+2. **Transfer Loops**: Agents immediately transferring back and forth
+3. **Conditional Chaos**: Nested if-else statements for routing logic
+4. **Context Loss**: Transferring without preserving important context
+5. **Specialist Overload**: One agent trying to handle too many domains
+
+### The 5-Question Test for Root Agent Simplicity
+
+If you can answer "yes" to these questions, your root agent is probably simple enough:
+
+1. **Can a new developer understand the transfer logic in 5 minutes?**
+2. **Are there fewer than 10 transfer rules total?**
+3. **Does each rule fit on one line?**
+4. **Are there no nested conditional statements?**
+5. **Is the agent description under 100 words?**
+
+## TL;DR: The Key Takeaway
+
+I reduced my root orchestrator from 150 lines to 79 lines by making it truly dumb and letting specialists handle complexity. This resulted in more consistent behavior, easier maintenance, and a much simpler system to understand and modify. The secret: **root agents should coordinate, not comprehend.**
 
 ## What's Next
 
-We're currently exploring:
-- Fine-tuning smaller models for specific tasks (reduce cost & latency)
-- Multi-agent collaboration patterns (specialist agents)
-- Streaming responses for better UX
+Now that you have the architecture principles, how do you actually ship this to production? Next week: "Production-Ready Agents: Beyond the Demo to Real-World Deployment" - where I'll share deployment patterns, monitoring strategies, and the lessons learned from running this system in production.
+
+**Follow for the complete series on building production AI agents with Google ADK.**
 
 ---
 
-*Want to discuss LLM agent architectures? Reach out on [LinkedIn](https://www.linkedin.com/in/suyi-zhang/) or [email](mailto:suyizhang52@gmail.com).*
+*Have you tried building multi-agent systems? What challenges did you face? Drop your experiences in the comments!*
