--- a/content/blog/deploy-adk-aws.mdx
+++ b/content/blog/deploy-adk-aws.mdx
@@ -400,4 +400,4 @@ Instead of deploying agents built with Google ADK with Google Cloud, I built a d
 
 *This is part 2 of my series reflecting on building production AI agents with Google ADK and AWS. Check out the other posts in the series:*
 
-1. *[Simplifying Multi-Agent Systems: Reducing Root Agent Complexity](./simplifying-multi-agent-systems)*
+1. [Simplifying Multi-Agent Systems: Reducing Root Agent Complexity](./simplifying-multi-agent-systems)*
