--- a/content/blog/implementing-retry-strategies-google-adk.mdx
+++ b/content/blog/implementing-retry-strategies-google-adk.mdx
@@ -90,5 +90,5 @@ This single change had one of the biggest impacts on my production system's reli
 
 *This is part 3 of my series reflecting on building production AI agents with Google ADK and AWS. Check out the other posts in the series:*
 
-1. [Simplifying Multi-Agent Systems: Reducing Root Agent Complexity](./simplifying-multi-agent-systems)*
+1. [Simplifying Multi-Agent Systems: Reducing Root Agent Complexity](./simplifying-multi-agent-systems)
 2. [Deploying Google ADK Agents to AWS: Integrating with Existing Infrastructure](./deploy-adk-aws)
