--- a/content/blog/deploy-adk-aws.mdx
+++ b/content/blog/deploy-adk-aws.mdx
@@ -369,7 +369,7 @@ After running this in production for 3 months:
 
 **Integration Benefits:**
 - **Zero latency** between agents and existing AWS services
-- **Direct database access** to supplier and customer data
+- **Direct database access** to record and customer data
 - **Unified billing** through existing AWS billing system
 - **Consistent security model** across all services
 
